[project]
name = "pydevtools"
version = "0.1.0"
description = "A lightweight collection of personal CLI tools for Python projects."
readme = "README.md"
authors = [
    { name = "Dave Berry" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
space = "pydevtools.check_space:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
